<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="TP4"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#6750A3"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:tabIndicatorColor="#FF1E1E"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="#8E8E8E"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_alta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alta" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_modificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificacion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_listado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listado" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="409dp"
        android:layout_height="617dp"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout1"
        tools:layout_editor_absoluteX="2dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>